--- a/style/main.css
+++ b/style/main.css
@@ -7,9 +7,6 @@ html, body {
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px; }
 
-body {
-  margin: 80px 0; }
-
 .heading:after {
   content: "";
   display: block;
@@ -116,8 +113,11 @@ hr {
   margin-bottom: 30px; }
 
 .container {
-  width: 500px;
-  margin: 0 auto; }
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px; }
 
 @-webkit-keyframes fade-in {
   0% {
@@ -536,10 +536,6 @@ hr {
 @media screen and (max-width: 520px) {
   html, body {
     font-size: 15px; }
-
-  body {
-    margin: 20px 0;
-    padding: 0 20px; }
 
   h1.title {
     font-size: 27px;
